--- a/docs/api/2.0-migration.md
+++ b/docs/api/2.0-migration.md
@@ -2,7 +2,7 @@
 
 The release of the `2.0` version of the library introduced many breaking changes in the API.
 
-This document is meant as a support to ease the migration from a `1.x` to a `2.x` version of the library.
+This document is provided to support migration from a `1.x` to a `2.x` version of the library.
 
 This guide covers the three components exposed by the library's API:
  * `VASTClient`
@@ -11,7 +11,7 @@ This guide covers the three components exposed by the library's API:
 
 ## No more static methods and properties
 
-Vast Client JS `1.x` made a strong use of static methods and properties, `2.0` version removes all the static components in favor of a non-static access through an instance of the class.
+Vast Client JS `1.x` made strong use of static methods and properties. The `2.0` version removes all the static components in favor of a non-static access through an instance of the class.
 
 `1.x` - Direct access to static components of the classes (without getting any instance of them):
 ```Javascript
@@ -28,7 +28,7 @@ DMVAST.parser.parse(VASTUrl, options, function(response, error) {
 var vastTracker = new DMVAST.tracker(ad, creative);
 ```
 
-`2.x` - To access any property or method of a class you need first to get an instance of the class using the constructor:
+`2.x` - To access any property or method of a class you first need to get an instance of the class using the constructor:
 ```Javascript
 import {
   VASTClient,
@@ -107,13 +107,13 @@ As mentioned in the first section, now you can use the client only through an in
 
 The constructor is now the preferred way to set the class properties. Direct access to properties should be avoided when possible.
 
-### Breaking changes in methods signatures
+### Breaking changes in method signatures
 No breaking changes in `VASTClient` methods.
 
 ## Changes in Parser API
 
 ### Constructor and properties
-As mentioned in the first section, now you can use the parser only through an instance. Documentation for the constructor is available in the `VASTParser` API docs.
+As mentioned in the first section, you can now only use the parser through an instance. Documentation for the constructor is available in the `VASTParser` API docs.
 
 ### Breaking changes in methods signatures
 These changes are mostly due to the semantic meaning of methods names.
