Update migration documentation

--- a/docs/api/2.0-migration.md
+++ b/docs/api/2.0-migration.md
@@ -118,8 +118,8 @@ As mentioned in the first section, you can now only use the parser through an in
 ### Breaking changes in methods signatures
 These changes are mostly due to the semantic meaning of methods names.
 
- * `parse(url, [options,] cb)` becomes `getAndParse(url, options, cb)`
- * `load(vastXml, [options,] cb)` becomes `parse(vastXml, options, cb)`
+ * `parse(url, [options,] cb)` becomes `getAndParseVAST(url, options, cb)`
+ * `load(vastXml, [options,] cb)` becomes `parseVAST(vastXml, options, cb)`
 
 `1.x` - Fetch and parse a VAST or simply parse a VAST:
 ```Javascript
@@ -139,12 +139,12 @@ DMVAST.parser.load(vastXml, options, cb);
 // To fetch and parse a VAST
 const vastUrl = 'http://example.dailymotion.com/vast.xml';
 
-vastParser.getAndPArse(vastUrl, options, cb);
+vastParser.getAndParseVAST(vastUrl, options, cb);
 
 // To parse an already fetched VAST xml
 const vastXml = (new window.DOMParser()).parseFromString(xmlStr, "text/xml");
 
-vastParser.parse(vastXml, options, cb);
+vastParser.parseVAST(vastXml, options, cb);
 ```
 
 ### Breaking changes in events
