--- a/docs/api/2.0-migration.md
+++ b/docs/api/2.0-migration.md
@@ -88,16 +88,27 @@ client.vastParser.addURLTemplateFilter( vastUrl => url.replace('[DOMAIN]', 'mywe
 client.get(vastUrl, options, cb);
 ```
 
-## Error first callbacks everywhere
-Every callback function now follows the error first standard. Therefore the function to pass as callback parameter should have the following signature:
+## Promises over callback
+Every callback function has been replaced with an es6 `Promise`.
 ```Javascript
-function(err, res) {
+// before
+vastClient.get('https://www.examplevast.com/vast.xml', (err, res) => {
   if (err) {
     // Deal with the error
   }
 
   // Deal with the result
 }
+
+// after
+vastClient.get('https://www.examplevast.com/vast.xml')
+  .then(res => {
+    // Do something with the parsed VAST response
+  })
+  .catch(err => {
+    // Deal with the error
+  })
+});
 ```
 
 ## Changes in Client API
@@ -108,7 +119,7 @@ As mentioned in the first section, now you can use the client only through an in
 The constructor is now the preferred way to set the class properties. Direct access to properties should be avoided when possible.
 
 ### Breaking changes in method signatures
-No breaking changes in `VASTClient` methods.
+ * `get(url, [options,] cb)` becomes `get(url, options)`
 
 ## Changes in Parser API
 
@@ -118,8 +129,8 @@ As mentioned in the first section, you can now only use the parser through an in
 ### Breaking changes in methods signatures
 These changes are mostly due to the semantic meaning of methods names.
 
- * `parse(url, [options,] cb)` becomes `getAndParseVAST(url, options, cb)`
- * `load(vastXml, [options,] cb)` becomes `parseVAST(vastXml, options, cb)`
+ * `parse(url, [options,] cb)` becomes `getAndParseVAST(url, options)`
+ * `load(vastXml, [options,] cb)` becomes `parseVAST(vastXml, options)`
 
 `1.x` - Fetch and parse a VAST or simply parse a VAST:
 ```Javascript
@@ -139,12 +150,14 @@ DMVAST.parser.load(vastXml, options, cb);
 // To fetch and parse a VAST
 const vastUrl = 'http://example.dailymotion.com/vast.xml';
 
-vastParser.getAndParseVAST(vastUrl, options, cb);
+// A Promise is returned
+vastParser.getAndParseVAST(vastUrl, options);
 
 // To parse an already fetched VAST xml
 const vastXml = (new window.DOMParser()).parseFromString(xmlStr, "text/xml");
 
-vastParser.parseVAST(vastXml, options, cb);
+// A Promise is returned
+vastParser.parseVAST(vastXml, options);
 ```
 
 ### Breaking changes in events
