[doc] fix broken link

--- a/docs/api/3.0-migration.md
+++ b/docs/api/3.0-migration.md
@@ -246,7 +246,7 @@ Due to a bug where `originalUrl` was being assigned not as the root url, but the
 
 #### VAST 4.1 Macros
 
-The vast-client now support VAST 4.1 Macros. The complete list of new supported macros is in the file [macros.js](src/util/macros.js). The following macro value will be set automatically (according to IAB specs) by vast-client if it exists in the tracking url:
+The vast-client now support VAST 4.1 Macros. The complete list of new supported macros is in the file [macros.js](/src/util/macros.js). The following macro value will be set automatically (according to IAB specs) by vast-client if it exists in the tracking url:
 
 * ADCATEGORIES
 * ADPLAYHEAD
@@ -304,3 +304,5 @@ once parsed we will obtain :
 * Inline sequence 1,
 * Inline sequence 2,
 * Inline sequence 3
+
+### New bundler
