[doc] Update doc

--- a/docs/api/3.0-migration.md
+++ b/docs/api/3.0-migration.md
@@ -306,3 +306,5 @@ once parsed we will obtain :
 * Inline sequence 3
 
 ### New bundler
+
+Replaced rollup plugin used for minify from `uglify` to `terser`
